# game_secret_list

./: CMakeLists.txt  README.md  da.json  main.cpp  test.cpp  отчёт.docx  проект.pptx
output/: da.json
